LenguajeParser.py
# Generated from Lenguaje.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LenguajeParser ( Parser ):

    grammarFileName = "Lenguaje.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'veces'", "'--'", "'Hacer'", "<INVALID>", 
                     "<INVALID>", "'-Escribir'", "'-Tarea-'", "'numero'", 
                     "<INVALID>", "'texto'", "<INVALID>", "'verdadero_falso'", 
                     "'inicial_nombre'", "'-'", "'*'", "'='", "'+'", "'/'", 
                     "'%'", "'-MayorOigual'", "'-Igual'", "'-MenorOigual'", 
                     "'-Menor'", "'-Mayor'", "'^'", "'-Ra\u00EDz'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "';'", "','", "'-Si'", 
                     "'-Sino'", "'-mientras'", "'-para'", "'-repetir'", 
                     "'lista'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "FUNCION", 
                      "NAMEF", "VARIABLE", "IMPRIMIR", "MAIN", "INT", "NUMBER", 
                      "STRING", "ORACION", "BOOLEAN", "CHAR", "MENOS", "MULT", 
                      "EQUALS", "MAS", "DIV", "PORCENTAJE", "MAYORIGUAL", 
                      "IGUAL", "MENORIGUAL", "MENOR", "MAYOR", "POW", "SQRT", 
                      "LPAREN", "RPAREN", "LCORCHE", "RCORCHE", "LLLAVE", 
                      "RLLAVE", "PUNTOYCOMA", "COMA", "IF", "ELSE", "MIENTRAS", 
                      "PARA", "FOR", "LISTA", "WS" ]

    RULE_programa = 0
    RULE_funcion = 1
    RULE_parametros = 2
    RULE_bloque = 3
    RULE_sentencia = 4
    RULE_tarea = 5
    RULE_declaracion = 6
    RULE_siEntonces = 7
    RULE_sinoEntonces = 8
    RULE_imprimir = 9
    RULE_mientras = 10
    RULE_asignacion = 11
    RULE_para = 12
    RULE_repetirCiclo = 13
    RULE_llamadaFuncion = 14
    RULE_argumentos = 15
    RULE_expresion = 16
    RULE_primary = 17
    RULE_lista = 18
    RULE_matriz = 19
    RULE_operator = 20

    ruleNames =  [ "programa", "funcion", "parametros", "bloque", "sentencia", 
                   "tarea", "declaracion", "siEntonces", "sinoEntonces", 
                   "imprimir", "mientras", "asignacion", "para", "repetirCiclo", 
                   "llamadaFuncion", "argumentos", "expresion", "primary", 
                   "lista", "matriz", "operator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    FUNCION=3
    NAMEF=4
    VARIABLE=5
    IMPRIMIR=6
    MAIN=7
    INT=8
    NUMBER=9
    STRING=10
    ORACION=11
    BOOLEAN=12
    CHAR=13
    MENOS=14
    MULT=15
    EQUALS=16
    MAS=17
    DIV=18
    PORCENTAJE=19
    MAYORIGUAL=20
    IGUAL=21
    MENORIGUAL=22
    MENOR=23
    MAYOR=24
    POW=25
    SQRT=26
    LPAREN=27
    RPAREN=28
    LCORCHE=29
    RCORCHE=30
    LLLAVE=31
    RLLAVE=32
    PUNTOYCOMA=33
    COMA=34
    IF=35
    ELSE=36
    MIENTRAS=37
    PARA=38
    FOR=39
    LISTA=40
    WS=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tarea(self):
            return self.getTypedRuleContext(LenguajeParser.TareaContext,0)


        def funcion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeParser.FuncionContext)
            else:
                return self.getTypedRuleContext(LenguajeParser.FuncionContext,i)


        def getRuleIndex(self):
            return LenguajeParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = LenguajeParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LenguajeParser.FUNCION:
                self.state = 42
                self.funcion()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.tarea()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCION(self):
            return self.getToken(LenguajeParser.FUNCION, 0)

        def NAMEF(self):
            return self.getToken(LenguajeParser.NAMEF, 0)

        def LPAREN(self):
            return self.getToken(LenguajeParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LenguajeParser.RPAREN, 0)

        def LLLAVE(self):
            return self.getToken(LenguajeParser.LLLAVE, 0)

        def bloque(self):
            return self.getTypedRuleContext(LenguajeParser.BloqueContext,0)


        def RLLAVE(self):
            return self.getToken(LenguajeParser.RLLAVE, 0)

        def parametros(self):
            return self.getTypedRuleContext(LenguajeParser.ParametrosContext,0)


        def getRuleIndex(self):
            return LenguajeParser.RULE_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncion" ):
                listener.enterFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncion" ):
                listener.exitFuncion(self)




    def funcion(self):

        localctx = LenguajeParser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(LenguajeParser.FUNCION)
            self.state = 51
            self.match(LenguajeParser.NAMEF)
            self.state = 52
            self.match(LenguajeParser.LPAREN)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LenguajeParser.NAMEF:
                self.state = 53
                self.parametros()


            self.state = 56
            self.match(LenguajeParser.RPAREN)
            self.state = 57
            self.match(LenguajeParser.LLLAVE)
            self.state = 58
            self.bloque()
            self.state = 59
            self.match(LenguajeParser.RLLAVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametrosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAMEF(self, i:int=None):
            if i is None:
                return self.getTokens(LenguajeParser.NAMEF)
            else:
                return self.getToken(LenguajeParser.NAMEF, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(LenguajeParser.COMA)
            else:
                return self.getToken(LenguajeParser.COMA, i)

        def getRuleIndex(self):
            return LenguajeParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)




    def parametros(self):

        localctx = LenguajeParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(LenguajeParser.NAMEF)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LenguajeParser.COMA:
                self.state = 62
                self.match(LenguajeParser.COMA)
                self.state = 63
                self.match(LenguajeParser.NAMEF)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BloqueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(LenguajeParser.SentenciaContext,i)


        def getRuleIndex(self):
            return LenguajeParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)




    def bloque(self):

        localctx = LenguajeParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 69
                    self.sentencia()

                else:
                    raise NoViableAltException(self)
                self.state = 72 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SentenciaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def siEntonces(self):
            return self.getTypedRuleContext(LenguajeParser.SiEntoncesContext,0)


        def declaracion(self):
            return self.getTypedRuleContext(LenguajeParser.DeclaracionContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(LenguajeParser.AsignacionContext,0)


        def mientras(self):
            return self.getTypedRuleContext(LenguajeParser.MientrasContext,0)


        def para(self):
            return self.getTypedRuleContext(LenguajeParser.ParaContext,0)


        def repetirCiclo(self):
            return self.getTypedRuleContext(LenguajeParser.RepetirCicloContext,0)


        def imprimir(self):
            return self.getTypedRuleContext(LenguajeParser.ImprimirContext,0)


        def llamadaFuncion(self):
            return self.getTypedRuleContext(LenguajeParser.LlamadaFuncionContext,0)


        def getRuleIndex(self):
            return LenguajeParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)




    def sentencia(self):

        localctx = LenguajeParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sentencia)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LenguajeParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.siEntonces()
                pass
            elif token in [LenguajeParser.INT, LenguajeParser.STRING, LenguajeParser.BOOLEAN, LenguajeParser.SQRT, LenguajeParser.LISTA]:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.declaracion()
                pass
            elif token in [LenguajeParser.NAMEF]:
                self.enterOuterAlt(localctx, 3)
                self.state = 76
                self.asignacion()
                pass
            elif token in [LenguajeParser.MIENTRAS]:
                self.enterOuterAlt(localctx, 4)
                self.state = 77
                self.mientras()
                pass
            elif token in [LenguajeParser.PARA]:
                self.enterOuterAlt(localctx, 5)
                self.state = 78
                self.para()
                pass
            elif token in [LenguajeParser.FOR]:
                self.enterOuterAlt(localctx, 6)
                self.state = 79
                self.repetirCiclo()
                pass
            elif token in [LenguajeParser.IMPRIMIR]:
                self.enterOuterAlt(localctx, 7)
                self.state = 80
                self.imprimir()
                pass
            elif token in [LenguajeParser.T__1]:
                self.enterOuterAlt(localctx, 8)
                self.state = 81
                self.llamadaFuncion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TareaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN(self):
            return self.getToken(LenguajeParser.MAIN, 0)

        def LLLAVE(self):
            return self.getToken(LenguajeParser.LLLAVE, 0)

        def RLLAVE(self):
            return self.getToken(LenguajeParser.RLLAVE, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(LenguajeParser.SentenciaContext,i)


        def getRuleIndex(self):
            return LenguajeParser.RULE_tarea

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTarea" ):
                listener.enterTarea(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTarea" ):
                listener.exitTarea(self)




    def tarea(self):

        localctx = LenguajeParser.TareaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tarea)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(LenguajeParser.MAIN)
            self.state = 85
            self.match(LenguajeParser.LLLAVE)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LenguajeParser.T__1) | (1 << LenguajeParser.NAMEF) | (1 << LenguajeParser.IMPRIMIR) | (1 << LenguajeParser.INT) | (1 << LenguajeParser.STRING) | (1 << LenguajeParser.BOOLEAN) | (1 << LenguajeParser.SQRT) | (1 << LenguajeParser.IF) | (1 << LenguajeParser.MIENTRAS) | (1 << LenguajeParser.PARA) | (1 << LenguajeParser.FOR) | (1 << LenguajeParser.LISTA))) != 0):
                self.state = 86
                self.sentencia()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(LenguajeParser.RLLAVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclaracionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAMEF(self):
            return self.getToken(LenguajeParser.NAMEF, 0)

        def EQUALS(self):
            return self.getToken(LenguajeParser.EQUALS, 0)

        def expresion(self):
            return self.getTypedRuleContext(LenguajeParser.ExpresionContext,0)


        def PUNTOYCOMA(self):
            return self.getToken(LenguajeParser.PUNTOYCOMA, 0)

        def BOOLEAN(self):
            return self.getToken(LenguajeParser.BOOLEAN, 0)

        def INT(self):
            return self.getToken(LenguajeParser.INT, 0)

        def STRING(self):
            return self.getToken(LenguajeParser.STRING, 0)

        def SQRT(self):
            return self.getToken(LenguajeParser.SQRT, 0)

        def LISTA(self):
            return self.getToken(LenguajeParser.LISTA, 0)

        def getRuleIndex(self):
            return LenguajeParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)




    def declaracion(self):

        localctx = LenguajeParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaracion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LenguajeParser.INT) | (1 << LenguajeParser.STRING) | (1 << LenguajeParser.BOOLEAN) | (1 << LenguajeParser.SQRT) | (1 << LenguajeParser.LISTA))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 95
            self.match(LenguajeParser.NAMEF)
            self.state = 96
            self.match(LenguajeParser.EQUALS)
            self.state = 97
            self.expresion()
            self.state = 98
            self.match(LenguajeParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SiEntoncesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(LenguajeParser.IF, 0)

        def LPAREN(self):
            return self.getToken(LenguajeParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(LenguajeParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(LenguajeParser.RPAREN, 0)

        def LLLAVE(self):
            return self.getToken(LenguajeParser.LLLAVE, 0)

        def bloque(self):
            return self.getTypedRuleContext(LenguajeParser.BloqueContext,0)


        def RLLAVE(self):
            return self.getToken(LenguajeParser.RLLAVE, 0)

        def sinoEntonces(self):
            return self.getTypedRuleContext(LenguajeParser.SinoEntoncesContext,0)


        def getRuleIndex(self):
            return LenguajeParser.RULE_siEntonces

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSiEntonces" ):
                listener.enterSiEntonces(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSiEntonces" ):
                listener.exitSiEntonces(self)




    def siEntonces(self):

        localctx = LenguajeParser.SiEntoncesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_siEntonces)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(LenguajeParser.IF)
            self.state = 101
            self.match(LenguajeParser.LPAREN)
            self.state = 102
            self.expresion()
            self.state = 103
            self.match(LenguajeParser.RPAREN)
            self.state = 104
            self.match(LenguajeParser.LLLAVE)
            self.state = 105
            self.bloque()
            self.state = 106
            self.match(LenguajeParser.RLLAVE)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LenguajeParser.ELSE:
                self.state = 107
                self.sinoEntonces()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SinoEntoncesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(LenguajeParser.ELSE, 0)

        def LLLAVE(self):
            return self.getToken(LenguajeParser.LLLAVE, 0)

        def bloque(self):
            return self.getTypedRuleContext(LenguajeParser.BloqueContext,0)


        def RLLAVE(self):
            return self.getToken(LenguajeParser.RLLAVE, 0)

        def getRuleIndex(self):
            return LenguajeParser.RULE_sinoEntonces

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSinoEntonces" ):
                listener.enterSinoEntonces(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSinoEntonces" ):
                listener.exitSinoEntonces(self)




    def sinoEntonces(self):

        localctx = LenguajeParser.SinoEntoncesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_sinoEntonces)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(LenguajeParser.ELSE)
            self.state = 111
            self.match(LenguajeParser.LLLAVE)
            self.state = 112
            self.bloque()
            self.state = 113
            self.match(LenguajeParser.RLLAVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImprimirContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPRIMIR(self):
            return self.getToken(LenguajeParser.IMPRIMIR, 0)

        def LPAREN(self):
            return self.getToken(LenguajeParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(LenguajeParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(LenguajeParser.RPAREN, 0)

        def PUNTOYCOMA(self):
            return self.getToken(LenguajeParser.PUNTOYCOMA, 0)

        def getRuleIndex(self):
            return LenguajeParser.RULE_imprimir

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImprimir" ):
                listener.enterImprimir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImprimir" ):
                listener.exitImprimir(self)




    def imprimir(self):

        localctx = LenguajeParser.ImprimirContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_imprimir)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(LenguajeParser.IMPRIMIR)
            self.state = 116
            self.match(LenguajeParser.LPAREN)
            self.state = 117
            self.expresion()
            self.state = 118
            self.match(LenguajeParser.RPAREN)
            self.state = 119
            self.match(LenguajeParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MientrasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MIENTRAS(self):
            return self.getToken(LenguajeParser.MIENTRAS, 0)

        def LPAREN(self):
            return self.getToken(LenguajeParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(LenguajeParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(LenguajeParser.RPAREN, 0)

        def bloque(self):
            return self.getTypedRuleContext(LenguajeParser.BloqueContext,0)


        def getRuleIndex(self):
            return LenguajeParser.RULE_mientras

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMientras" ):
                listener.enterMientras(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMientras" ):
                listener.exitMientras(self)




    def mientras(self):

        localctx = LenguajeParser.MientrasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_mientras)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(LenguajeParser.MIENTRAS)
            self.state = 122
            self.match(LenguajeParser.LPAREN)
            self.state = 123
            self.expresion()
            self.state = 124
            self.match(LenguajeParser.RPAREN)
            self.state = 125
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AsignacionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAMEF(self):
            return self.getToken(LenguajeParser.NAMEF, 0)

        def EQUALS(self):
            return self.getToken(LenguajeParser.EQUALS, 0)

        def expresion(self):
            return self.getTypedRuleContext(LenguajeParser.ExpresionContext,0)


        def PUNTOYCOMA(self):
            return self.getToken(LenguajeParser.PUNTOYCOMA, 0)

        def getRuleIndex(self):
            return LenguajeParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = LenguajeParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(LenguajeParser.NAMEF)
            self.state = 128
            self.match(LenguajeParser.EQUALS)
            self.state = 129
            self.expresion()
            self.state = 130
            self.match(LenguajeParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARA(self):
            return self.getToken(LenguajeParser.PARA, 0)

        def LPAREN(self):
            return self.getToken(LenguajeParser.LPAREN, 0)

        def asignacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeParser.AsignacionContext)
            else:
                return self.getTypedRuleContext(LenguajeParser.AsignacionContext,i)


        def expresion(self):
            return self.getTypedRuleContext(LenguajeParser.ExpresionContext,0)


        def PUNTOYCOMA(self):
            return self.getToken(LenguajeParser.PUNTOYCOMA, 0)

        def RPAREN(self):
            return self.getToken(LenguajeParser.RPAREN, 0)

        def bloque(self):
            return self.getTypedRuleContext(LenguajeParser.BloqueContext,0)


        def getRuleIndex(self):
            return LenguajeParser.RULE_para

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPara" ):
                listener.enterPara(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPara" ):
                listener.exitPara(self)




    def para(self):

        localctx = LenguajeParser.ParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_para)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(LenguajeParser.PARA)
            self.state = 133
            self.match(LenguajeParser.LPAREN)
            self.state = 134
            self.asignacion()
            self.state = 135
            self.expresion()
            self.state = 136
            self.match(LenguajeParser.PUNTOYCOMA)
            self.state = 137
            self.asignacion()
            self.state = 138
            self.match(LenguajeParser.RPAREN)
            self.state = 139
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RepetirCicloContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(LenguajeParser.FOR, 0)

        def NUMBER(self):
            return self.getToken(LenguajeParser.NUMBER, 0)

        def LLLAVE(self):
            return self.getToken(LenguajeParser.LLLAVE, 0)

        def bloque(self):
            return self.getTypedRuleContext(LenguajeParser.BloqueContext,0)


        def RLLAVE(self):
            return self.getToken(LenguajeParser.RLLAVE, 0)

        def getRuleIndex(self):
            return LenguajeParser.RULE_repetirCiclo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepetirCiclo" ):
                listener.enterRepetirCiclo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepetirCiclo" ):
                listener.exitRepetirCiclo(self)




    def repetirCiclo(self):
